styles/generic.less
@import "dimensions";

// UNIVERSAL BORDER BOX & SMOOTH SCROLL

html {
  box-sizing: border-box;
  scroll-behavior: smooth;
}

*, *:before, *:after {
  box-sizing: inherit;
}

// NORMALIZE

@import (inline) "normalize.min.css";
@import (inline) "min-reset.css";

// GENERICS & COMMONS

main {
  display: grid;
  grid-template-columns: 100%;
}

.container {
  max-width: @page-width;
  margin: 0 auto;
  padding-left: @page-padding;
  padding-right: @page-padding;
}

img {
  max-width: 100%;
  height: auto;
}

picture {
  line-height: 0; // Remove space underneath images - https://stackoverflow.com/a/31445364
}

a:link, a:visited {
  text-decoration: none;
}

a:link:not(.button) {
  text-decoration-color: #0000;
  text-underline-offset: 0.1em;
  transition: text-decoration-color 400ms;

  &:hover {
    text-decoration: underline;
  }
}

.button {
  min-width: 300px;
  max-width: fit-content;
  outline: none;
  cursor: pointer;
  text-align: center;
}

// FORM

// Hide the analytic script's hidden input container which adds extra row-gap to form layouts.
form div:last-child[id^="wf_tr_"] {
  display: none;
}

// WORKAROUND for Chrome's weird bug which triggers transitions on page load
// Add "preload" class to the body and remove it after the "DOMContentLoaded" event.
.preload * {
  -webkit-transition: none !important;
  -moz-transition: none !important;
  -ms-transition: none !important;
  -o-transition: none !important;
}

@media @media-desktop {
  .parallax {
    background-attachment: fixed !important;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
  }
}

